# podcasts-recommender-system

./: .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
data/: extract_podcasts.py
data/processed/: eval_ground-truth-data.csv  eval_ground-truth-data_10.csv  eval_ground-truth-data_1000q.csv  eval_ground-truth-data_1000q_b.csv  eval_ground-truth-data_1000q_c.csv  eval_ground-truth-data_1500.csv  podcasts.json
data/raw/: podcasts.json  podcasts_0.csv
notebooks/: EDA.ipynb  eval_ground_truth_generation.ipynb  eval_metrics_calculation.ipynb  evaluation_miniLM_embeddings.ipynb  search_index.ipynb  search_quick_test.ipynb
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb  recommendation model building-checkpoint.ipynb
src/: app.py  model.py  recommendations_by_tfidf.py
src/.ipynb_checkpoints/: app-checkpoint.py  recommendations_by_miniLM-checkpoint.py
