[tool.poetry]
name = "podcasts-recommender-system"
version = "0.1.0"
description = ""
authors = ["Anastasia Karavdina"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
seaborn = "^0.11.1"
matplotlib = "3.7.3" #later versions have issue with seaborn
streamlit = "^1.37.0"
plotly = "^5.23.0"
scikit-learn = "^1.5.1"
sentence-transformers = "^3.0.1"
nltk = "^3.8.1"
mpi4py = "^4.0.0"
beautifulsoup4 = "^4.12.3"
jupyterlab = "^4.2.4"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
